Please view this file on the master branch, on stable branches it's out of date.

v 8.11.0 (unreleased)
  - Remove magic comments (`# encoding: UTF-8`) from Ruby files !5456 (winniehell)
  - Fix of 'Commits being passed to custom hooks are already reachable when using the UI'
  - Limit git rev-list output count to one in forced push check
  - Retrieve rendered HTML from cache in one request
  - Make fork counter always clickable !5463 (winniehell)
  - Load project invited groups and members eagerly in ProjectTeam#fetch_members
  - Add GitLab Workhorse version to admin dashboard (Katarzyna Kobierska Ula Budziszewska)

v 8.10.2 (unreleased)
  - Use project ID in repository cache to prevent stale data from persisting across projects

v 8.10.1 (unreleased)
  - Fix Error 500 when creating Wiki pages with hyphens or spaces
  - Ignore invalid trusted proxies in X-Forwarded-For header
  - Fix bug where replies to commit notes displayed in the MR discussion tab wouldn't show up on the commit page

v 8.10.0 (unreleased)
  - User can now search branches by name. !5144 (tiagonbotelho)
v 8.10.0
  - Fix profile activity heatmap to show correct day name (eanplatter)
  - Speed up ExternalWikiHelper#get_project_wiki_path
  - Expose {should,force}_remove_source_branch (Ben Boeckel)
  - Add the functionality to be able to rename a file. !5049
  - Disable PostgreSQL statement timeout during migrations
  - Fix projects dropdown loading performance with a simplified api cal. !5113
  - Fix commit builds API, return all builds for all pipelines for given commit. !4849
  - Replace Haml with Hamlit to make view rendering faster. !3666
  - Refresh the branch cache after `git gc` runs
  - Allow to disable request access button on projects/groups
  - Refactor repository paths handling to allow multiple git mount points
  - Optimize system note visibility checking by memoizing the visible reference count. !5070
  - Add Application Setting to configure default Repository Path for new projects