@@ -5,6 +5,7 @@ v 8.11.0 (unreleased)
   - Fix of 'Commits being passed to custom hooks are already reachable when using the UI'
   - Limit git rev-list output count to one in forced push check
   - Retrieve rendered HTML from cache in one request
+  - Nokogiri's various parsing methods are now instrumented
   - Make fork counter always clickable !5463 (winniehell)
   - Load project invited groups and members eagerly in ProjectTeam#fetch_members
   - Add GitLab Workhorse version to admin dashboard (Katarzyna Kobierska Ula Budziszewska)
